...
            android:gravity="center_horizontal"
            android:text="@string/compare_job_offers"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
        <TableLayout
            android:id="@+id/compareJobsTableID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:stretchColumns="1">
...
                android:id="@+id/btnOfferCompare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="handleEditClick"
                android:text="Edit" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
